frontend: fix steps background color in add-account view
Steps background is not visible anymore.

Regression introduced in:
- ba7e5eac8a67e67e5b9531e4f0cc7f52a0a8150d

--- a/frontends/web/src/components/steps/steps.module.css
+++ b/frontends/web/src/components/steps/steps.module.css
@@ -77,7 +77,7 @@
 }
 
 .wait .dot::before {
-    background: var(--background-quaternary);
+    background: var(--background-tertiary);
     height: var(--icon-size-small);
     width: var(--icon-size-small);
 }
@@ -91,7 +91,7 @@
 }
 
 .wait.line .dot::after {
-    border-color: var(--background-quaternary);
+    border-color: var(--background-tertiary);
     border-top-width: 3px;
     top: 7px;
 }
